[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/Main_Screen.gd" type="Script" id=1]

[node name="Page_Principale" type="Node"]

script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 448.0
margin/top = 284.0
margin/right = 615.0
margin/bottom = 298.0
text = "Entrez le nom du candidat"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Nom" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 455.0
margin/top = 303.0
margin/right = 604.0
margin/bottom = 327.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Continuer" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 556.0
margin/top = 369.0
margin/right = 630.0
margin/bottom = 389.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continuer"
flat = false

[node name="Quitter" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 449.0
margin/top = 368.0
margin/right = 520.0
margin/bottom = 388.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quitter"
flat = false

[connection signal="text_changed" from="Nom" to="." method="_on_Nom_text_changed"]

[connection signal="pressed" from="Continuer" to="." method="_on_Continuer_pressed"]

[connection signal="pressed" from="Quitter" to="." method="_on_Quitter_pressed"]


